[package]
name = "linked-vector"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["tmtappr@gmail.com"]
description = "A hybrid linked list and vector data structure"
documentation = "https://ttappr.github.io/linked-vector/doc/linked_vector/index.html"
repository = "https://github.com/ttappr/linked-vector"
readme = "README.md"
exclude = ["docs", "TODO.md"]
keywords = ["linked", "list", "vector"]
categories = ["data-structures"]

[dependencies]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
