[package]
name = "linked-vector"
version = "1.2.1"
edition = "2021"
license = "MIT"
authors = ["tmtappr@gmail.com"]
description = "A hybrid linked list and vector data structure"
documentation = "https://ttappr.github.io/linked-vector/doc/linked_vector/index.html"
repository = "https://github.com/ttappr/linked-vector"
readme = "README.md"
exclude = ["docs", "TODO.md"]
keywords = ["linked", "list", "vector"]
categories = ["data-structures"]

[features]

# Certain accesors like `get()` and `get_mut()` that take a handle as a 
# parameter would panic on a bad handle anyway, so it doesn't make sense that
# they return an `Option`. This feature changes the `Option` return value from 
# those methods to return a reference to the element related to the handle 
# instead.
optionless-accessors = []

# This feature enables the `remove()` method of `CursorMut`. Care should be 
# taken to ensure the `LinkedVector` a `CursorMut` is attached to isn't empty
# before performing other operations after `remove()` has drained it.
cursor-remove = []

[dependencies]

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


